--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,2 +1,91 @@
-/**/
+*{
+    margin: 0%;
+}
 
+.container{
+    width: 100%;
+    height: 20rem;
+    border-radius: 10px;
+}
+
+.head{
+    background-color: rgb(51, 142, 198);
+    color: white;
+    width: 100%;
+    height: 10rem;
+    font-size: 3rem;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: grid;
+}
+
+.nave{
+    background-color: rgb(71, 71, 71);
+    width: 100%;
+    height: 70px;
+    color: rgb(255, 255, 255);
+    font-size: 30px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+article{
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.conteudo{
+    background-color: rgb(73, 139, 200);
+    width: 100%;
+    height: 55rem;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+a:link, a:visited {
+    color: rgb(255, 255, 255);
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+
+}
+
+#logo{
+    width: 5rem;
+    border-radius: 50%;
+    margin-left: 1rem;
+    margin-top: 1rem;
+
+}
+
+.fim{
+    background-color: rgb(44, 44, 44);
+    width: 100%;
+    height: 10rem;
+}
+
+#cont-text{
+    background-color: rgb(228, 228, 228);
+    height: 50rem;
+    width: 85%;
+    text-align: center;
+    color: black;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    
+}
+
+#cont-img{
+    width: 30rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+#text{
+    width: 50%;
+    text-align: center;
+}
