--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,91 +1,65 @@
-*{
-    margin: 0%;
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #f0f0f0;
+  color: #333;
 }
 
-.container{
-    width: 100%;
-    height: 20rem;
-    border-radius: 10px;
+header, nav, main, footer {
+  padding: 20px;
 }
 
-.head{
-    background-color: rgb(51, 142, 198);
-    color: white;
-    width: 100%;
-    height: 10rem;
-    font-size: 3rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    display: grid;
+nav ul {
+  list-style: none;
+  padding: 0;
 }
 
-.nave{
-    background-color: rgb(71, 71, 71);
-    width: 100%;
-    height: 70px;
-    color: rgb(255, 255, 255);
-    font-size: 30px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+nav ul li {
+  display: inline;
+  margin-right: 10px;
 }
 
-article{
-    margin-left: 5%;
-    margin-right: 5%;
+nav ul li a {
+  text-decoration: none;
 }
 
-.conteudo{
-    background-color: rgb(73, 139, 200);
-    width: 100%;
-    height: 55rem;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
+nav ul li a:hover {
+  color: #ff6600;
 }
 
-a:link, a:visited {
-    color: rgb(255, 255, 255);
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
 }
 
-#logo{
-    width: 5rem;
-    border-radius: 50%;
-    margin-left: 1rem;
-    margin-top: 1rem;
-
+section {
+  margin-bottom: 30px;
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.fim{
-    background-color: rgb(44, 44, 44);
-    width: 100%;
-    height: 10rem;
+h2 {
+  color: #ff6600;
 }
 
-#cont-text{
-    background-color: rgb(228, 228, 228);
-    height: 50rem;
-    width: 85%;
-    text-align: center;
-    color: black;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 17px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    
+p {
+  color: #444;
 }
 
-#cont-img{
-    width: 30rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+footer a {
+  color: #ff6600;
 }
 
-#text{
-    width: 50%;
-    text-align: center;
+footer a:hover {
+  color: #fff;
+}
+
+/* Estilo para ajustar o tamanho do iframe */
+#iframe-vlibras {
+  width: 100%; /* Utiliza toda a largura disponível */
+  height: 1000px; /* Altura ajustada para 1179x2556 pixels */
 }
